# Icarus

./: CMakeLists.txt  LICENSE
benchmark/: CMakeLists.txt  benchmarkKalman.cpp
icarus/: CMakeLists.txt
icarus/include/icarus/: AK8963_impl.hpp  Aircraft.hpp  BMP180_impl.hpp  Controller.hpp  ElectricMotor.hpp  EllipsoidalCalibration.hpp  I2CRegisterBank.hpp  MPU9255_impl.hpp  MerweScaledSigmaPoints.hpp  RigidBodyProcessModel.hpp  SensorFusion.hpp  SensorReading.hpp  SigmaPoints.hpp  Thruster.hpp  UnscentedKalmanFilter.hpp
icarus/include/icarus/actuator/: PID.hpp
icarus/include/icarus/bus/: I2CRegisterBank.hpp
icarus/include/icarus/sensor/: BMP180.hpp  BMP180_impl.hpp  EllipsoidalCalibration.hpp  EllipsoidalCalibrator.hpp  MPU9255.hpp  MPU9255_impl.hpp  OffsetCalibration.hpp  VarianceEstimator.hpp
icarus/include/icarus/sensorFusion/: FlightModel.hpp  GMMeasurementModel.hpp  GasModel.hpp  GaussianDistribution.hpp  MerweScaledSigmaPoints.hpp  RigidBodyProcessModel.hpp  UnscentedKalmanFilter.hpp
icarus/source/: Aircraft.cpp  ElectricMotor.cpp  EllipsoidalCalibration.cpp  EllipsoidalCalibrator.cpp  PIDController.cpp
include/icarus/: AK8963.hpp  AK8963_impl.hpp  Algebra.hpp  BMP180.hpp  BMP180_impl.hpp  EllipsoidalCalibration.hpp  EllipsoidalCalibrator.hpp  GyroscopeMeasurementModel.hpp  HoverNavigator.hpp  I2CRegisterBank.hpp  KalmanFilter.hpp  MPU9255.hpp  MPU9255_impl.hpp  MerweScaledSigmaPoints.hpp  Navigator.hpp  PIDController.hpp  Registers.hpp  RigidBodyProcessModel.hpp  SensorReading.hpp  SigmaPoint.hpp  State.hpp  Thruster.hpp  UnscentedKalmanFilter.hpp
source/: EllipsoidalCalibration.cpp  EllipsoidalCalibrator.cpp  HoverNavigator.cpp  KalmanFilter.cpp
test/: CMakeLists.txt  EigenMatrixPlugin.hpp  EigenQuaternionPlugin.hpp  IsSameAs.hpp  IsSameOrientationAs.hpp  TestBase.hpp  TestEllipsoidalCalibrator.cpp  TestGasModel.cpp  TestKalmanFilter.cpp  TestMeasurementModel.cpp  TestMerweScaledSigmaPoints.cpp  TestProcessModel.cpp  testEllipsoidalCalibrator.cpp  testGasModel.cpp  testKalmanFilter.cpp  testMerweScaledSigmaPoints.cpp  testRigidBodyProcessModel.cpp
